Fix warnings ready for Java 9