@@ -45,7 +45,7 @@ public final class DoubleArrayMath {
     }
     Double[] result = new Double[array.length];
     for (int i = 0; i < array.length; i++) {
-      result[i] = new Double(array[i]);
+      result[i] = Double.valueOf(array[i]);
     }
     return result;
   }
